First Commit. Working build v 1.0

--- a/Lara Data Logger 32 bit SAMD/Makefile
+++ b/Lara Data Logger 32 bit SAMD/Makefile
@@ -21,10 +21,17 @@
 # List application Arduino/chipKIT/Digispark/Energia/Maple/Microduino/Teensy/Wiring libraries here
 # default = 0 = none
 #
-APP_LIBS_LIST = 0
+# ARDUINO : AVR = EEPROM GSM SoftwareSerial SPI Wire 
+# ARDUINO : SAM = SPI Wire 
+# ARDUINO : SAMD = EnergySaving GSM LCD SoftwareSerial SPI 
+#	Wire 
+# ARDUINO = Audio Bridge Esplora Ethernet Ethernet2 
+#
+APP_LIBS_LIST = SPI SD WIRE MATH RTClib
 
 # List user's libraries here 
 # default = 0 = none
+#
 #
 USER_LIBS_LIST = 0
 
@@ -48,7 +55,7 @@ USER_LIBS_LIST = 0
 # BOARD_PORT is optional
 # If not defined, BOARD_PORT = /dev/tty.usb* (default)
 #
-#BOARD_PORT = /dev/tty.usbmodem*
+BOARD_PORT = /dev/tty.usbmodem1421
 
 # Xcode takes SKETCHBOOK_DIR from preferences.txt
 # If not defined, each IDE has its own SKETCHBOOK_DIR (default)
@@ -59,7 +66,7 @@ USER_LIBS_LIST = 0
 # SERIAL_BAUDRATE for the serial console, 9600 by default
 # Uncomment and specify another speed
 #
-#SERIAL_BAUDRATE = 115200
+SERIAL_BAUDRATE = 115200
 
 
 # Miscellaneous
@@ -78,4 +85,5 @@ MAKEFILE_PATH  = $(CURRENT_DIR)/Makefiles
 UTILITIES_PATH = $(CURRENT_DIR)/Utilities
 
 include $(MAKEFILE_PATH)/Step1.mk
+
 
